--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1024">
+
   <title>Shopping Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="wrapper">
+    <!-- Header, hero, products, footer here -->
+  
+  
   <!-- Header Section -->
   <header class="header">
     <div class="logo">ShopNow</div>
@@ -105,5 +110,6 @@
   <footer class="footer">
     <p>&copy; 2025 ShopNow. All rights reserved.</p>
   </footer>
+</div>
 </body>
 </html>
