--- a/index.html
+++ b/index.html
@@ -43,28 +43,183 @@
         cart
       </div>
     </div>
-    <div class="panel">
-      <div class="panel-all">
+    <div class="panel ">
+      <div class="panel-all border">
         <i class="fa-solid fa-bars"></i>
         All
       </div>
       <div class="panel-ops">
-        <p>Today's Deals</p>
-        <p> Registry</p>
-        <p>Prime Video</p>
-        <p> Gift Cards</p>
-        <p>Customer Service</p>
-        <p>Sell</p>
+        <p class="border">Today's Deals</p>
+        <p class="border"> Registry</p>
+        <p class="border">Prime Video</p>
+        <p class="border"> Gift Cards</p>
+        <p class="border">Customer Service</p>
+        <p class="border">Sell</p>
       </div>
-      <div class="panel-deals">
+      <div class="panel-deals border">
         Shop deals in Electronics
       </div>
     </div>
   </header>
   <div class="hero-section">
     <div class="hero-massage">
-      <p>you are on amazon.com You can also Shop on Amazon Pakistan for millions of products with fast local delivery.   <a href="">Click here to go to amazon.pk</a></p>
+      <p>You are on amazon.com You can also Shop on Amazon Pakistan for millions of products with fast local delivery.   <a href="">Click here to go to amazon.pk</a></p>
     </div>
   </div>
+  <div class="shop-section">
+    <div class="box1 box">
+   <div class="box-content"> 
+    <h2>Gaming accessories</h2>
+<div class="box-img" style="background-image: url(product2.jpg);"></div>
+<p>See more</p>
+  </div></div>
+    <div class="box2 box"><div class="box-content"> 
+      <h2>Save on gifts for Dad</h2>
+  <div class="box-img" style="background-image: url(product3.jpg);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box3 box"><div class="box-content"> 
+      <h2>Shoes</h2>
+  <div class="box-img" style="background-image: url(prudact4.png);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box4 box"><div class="box-content"> 
+      <h2>Gaming Laptop</h2>
+  <div class="box-img" style="background-image: url(product5.png);"></div>
+  <p>See more</p>
+    </div></div>
+  </div>
+
+  <div class="shop-section">
+    <div class="box1 box">
+   <div class="box-content"> 
+    <h2>Ties</h2>
+<div class="box-img" style="background-image: url(product6.png);"></div>
+<p>See more</p>
+  </div></div>
+    <div class="box2 box"><div class="box-content"> 
+      <h2>Smart watches</h2>
+  <div class="box-img" style="background-image: url(product7.png);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box3 box"><div class="box-content"> 
+      <h2>Tools</h2>
+  <div class="box-img" style="background-image: url(prduct8.png);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box4 box"><div class="box-content"> 
+      <h2>Personel Care</h2>
+  <div class="box-img" style="background-image: url(product9.png);"></div>
+  <p>See more</p>
+    </div></div>
+  </div>
+
+  <div class="shop-section">
+    <div class="box1 box">
+   <div class="box-content"> 
+    <h2>Toys For Kids</h2>
+<div class="box-img" style="background-image: url(product10.jpg);"></div>
+<p>See more</p>
+  </div></div>
+    <div class="box2 box"><div class="box-content"> 
+      <h2>Tool Combo Kit</h2>
+  <div class="box-img" style="background-image: url(product11.webp);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box3 box"><div class="box-content"> 
+      <h2>Gaming Moniter</h2>
+  <div class="box-img" style="background-image: url(product12.webp);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box4 box"><div class="box-content"> 
+      <h2>Workout Shirts</h2>
+  <div class="box-img" style="background-image: url(product13.jpg);"></div>
+  <p>See more</p>
+    </div></div>
+  </div>
+
+  <div class="shop-section">
+    <div class="box1 box">
+   <div class="box-content"> 
+    <h2>AI Translation Earbuds</h2>
+<div class="box-img" style="background-image: url(product18.jpg);"></div>
+<p>See more</p>
+  </div></div>
+    <div class="box2 box"><div class="box-content"> 
+      <h2>Jump Rope</h2>
+  <div class="box-img" style="background-image: url(product15.webp);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box3 box"><div class="box-content"> 
+      <h2>Jelly Cream</h2>
+  <div class="box-img" style="background-image: url(product16.webp);"></div>
+  <p>See more</p>
+    </div></div>
+    <div class="box4 box"><div class="box-content"> 
+      <h2>KuaiLu Flip Flops</h2>
+  <div class="box-img" style="background-image: url(product20.jpg);"></div>
+  <p>See more</p>
+    </div></div>
+  </div>
+  <footer>
+    <div class="foot-panel">
+      Back to Top
+    </div>
+    <div class="foot-panel2">
+      <ul>
+        <p>Get to Know Us</p>
+<a> Careers</a>
+<a>Blog</a>
+<a>About Amazon</a>
+<a>Investor Relations</a>
+<a>Amazon Devices</a>
+<a>Amazon Science</a>
+ </ul>
+
+ <ul>
+  <p>Get to Know Us</p>
+<a> Careers</a>
+<a>Blog</a>
+<a>About Amazon</a>
+<a>Investor Relations</a>
+<a>Amazon Devices</a>
+<a>Amazon Science</a>
+</ul>
+
+<ul>
+  <p>Get to Know Us</p>
+<a> Careers</a>
+<a>Blog</a>
+<a>About Amazon</a>
+<a>Investor Relations</a>
+<a>Amazon Devices</a>
+<a>Amazon Science</a>
+</ul>
+
+<ul>
+  <p>Get to Know Us</p>
+<a> Careers</a>
+<a>Blog</a>
+<a>About Amazon</a>
+<a>Investor Relations</a>
+<a>Amazon Devices</a>
+<a>Amazon Science</a>
+</ul>
+    </div>
+    <div class="foot-panel3">
+      <div class="logo"></div>
+    </div>
+    <div class="foot-panel4">
+      <div class="pages">
+        <a>Conditions of use</a>
+        <a>Privacy Notice</a>
+        <a>Consumer Health Data Privacy Disclosure</a>
+        <a>Your Ads Privacy Choices</a>
+      </div>
+      <div class="copyright">
+        © 1996-2025, Amazon.com, Inc. or its affiliates
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
